Render continues to use render using previous scene when switching #35624

Closed
opened 2013-06-04 13:35:10 +02:00 by Bao 2 · 4 comments

%%%--- Operating System, Graphics card ---
Linux 64bit

- Blender version with error, and version that worked ---

Buildbot 57212

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the attached blend file and you can see it has two scenes "GPU Scene" and "CPU Scene", the difference between
them is one is using the GPU and the other is using the CPU, in the Device of the Render Panel.

Choose the "GPU Scene" and press F12. The render window appears and renders.

Now don't close the render window and change to the "CPU Scene". Press F12 and it is rendering using the GPU again.

We are yet on CPU Scene. But now close the render window and press F12. Now it renders correctly using the CPU.

%%%

%%%--- Operating System, Graphics card --- Linux 64bit - Blender version with error, and version that worked --- Buildbot 57212 - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the attached blend file and you can see it has two scenes "GPU Scene" and "CPU Scene", the difference between them is one is using the GPU and the other is using the CPU, in the Device of the Render Panel. Choose the "GPU Scene" and press F12. The render window appears and renders. Now don't close the render window and change to the "CPU Scene". Press F12 and it is rendering using the GPU again. We are yet on CPU Scene. But now close the render window and press F12. Now it renders correctly using the CPU. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It's a general problem, it doesn't just affect Cycles GPU/CPU but any render engine will continue to render the previously selected scene in the render window.%%%

%%%It's a general problem, it doesn't just affect Cycles GPU/CPU but any render engine will continue to render the previously selected scene in the render window.%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35624
No description provided.