Fix #35624: rendering to a new window, then switching scene in the main window, would still continue to render the previous scene in the render window on F12.